--- a/styles/colors.less
+++ b/styles/colors.less
@@ -7,7 +7,7 @@
 @purple:          rgba(120, 1, 200, 1);
 
 @light-sepia:     lighten(@sepia, 8%);
-@sepia:           rgba(255, 240, 220, 1);
+@sepia:           rgb(243, 227, 203);
 @dark-sepia:      darken(@sepia, 20%);
 @darker-sepia:    darken(@sepia, 60%);
 @darkest-sepia:   darken(@sepia, 75%);
