darken matching selection highlights. fixes #2

--- a/styles/base.less
+++ b/styles/base.less
@@ -314,4 +314,8 @@ atom-text-editor::shadow {
   .bracket-matcher .region {
     border-bottom: 3px double @blue;
   }
+
+  .highlights .highlight-selected .region {
+    border: 1px solid @syntax-highlight-selected-color;
+  }
 }
